# mcda-data-processing-tutorial

./: .gitignore  05-polars-duckdb-performance.py  README.md  pyproject.toml
.claude/: settings.local.json
slides/: package-lock.json  package.json  part-01-pathlib.md  part-02-pandas.md  part-03-polars.md  part-04-duckdb.md  slides.md
