[project]
name = "mcda-data-processing-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "duckdb>=1.1.3",
    "google-genai>=1.56.0",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
]
